--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,11 @@
         "psr/log": "^3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.22",
         "phpunit/phpunit": "^10.2"
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit",
+        "fix" : "vendor/bin/php-cs-fixer fix src"
     }
 }
