--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,12 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.28",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.3"
     },
     "scripts": {
         "test": "vendor/bin/phpunit --testdox",
-        "fix" : "vendor/bin/php-cs-fixer fix src"
+        "fix" : "vendor/bin/php-cs-fixer fix src",
+        "stan": "vendor/bin/phpstan analyse -l 6 src"
     }
 }
