allow launch workflow for changes on this file

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,11 +6,13 @@ on:
     paths:
       - "**/*.php"
       - "composer.json"
+      - ".github/workflows/php.yml"
   pull_request:
     branches: ["master"]
     paths:
       - "**/*.php"
       - "composer.json"
+      - ".github/workflows/php.yml"
 
 permissions:
   contents: read
